# chip8-interpreter

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
libs/: sdl2-config.cmake
libs/cmake-modules/: FindSDL2.cmake
src/: main.cpp  main.h  utils.cpp  utils.h
